# Discord_Watch

./: .env.example  ARCHITECTURE_DESIGN.md  Dockerfile  NOTIFICATIONS_README.md  README.md  docker-compose.yml  examples.py  generate_requirements.py  health.py  main.py  notifications_config.example.env  pyproject.toml  requirements.txt
notifications/: __init__.py  base.py  config.py  discord_provider.py  manager.py  telegram_images.py  telegram_provider.py
static/: health.html  voice-activity.html
